# thabi

./: .cache.sqlite  .gitignore  COEFFICIENT_CALCULATION_EXPLAINED.md  FINDINGS_ANALYSIS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  TUTORIAL.md  check_gemact_api.py  climate_data.py  climate_scenarios.csv  coefficient_example.py  config.py  data_loader.py  flood_risk_model.py  hybrid_claims_data.py  inspect_claims.py  main.py  molapo_claims_processed.csv  molapo_claims_real_climate.csv  molapo_reinsurance_pricing.csv  pareto_model.py  pyproject.toml  real_molapo_climate_data.csv  reinsurance_pricer.py  reinsurance_pricing.py  synthetic_claims.py  synthetic_claims_data.csv  temperature.csv  temperature.xlsx  test_real_climate.py  verify_q_formula.py  weather.py
data/: CAT Claims.csv  cat_claims.csv
docs/: COEFFICIENT_SUMMARY.md  DATA_SOURCES.md  MLE_FORMULA_CLARIFIED.md  REAL_WEATHER_SUMMARY.md  guide.md  steps.md  threshold_selection_methodology.md
