[project]
name = "thabi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "gemact>=1.2.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openmeteo-requests>=1.7.4",
    "pandas>=2.0.0",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "scipy>=1.16.3",
    "statsmodels>=0.14.5",
]
